Fix justify and dark mode on mobile

--- a/_sass/classes.sass
+++ b/_sass/classes.sass
@@ -31,6 +31,14 @@
     fill: $orange-color
     color: $orange-color
 
+  .excerpt-container 
+    display: flex
+    border-radius: 15px
+    border: 1px solid $border-color
+    padding: 20px
+    margin: 30px
+    background-color: rgb(10, 10, 10)
+
 
 
   
